js/src/jit-test/tests/binast/invalid/catch-scope-unmatched.binjs
BINJS
[
GRAMMAR
]
identity
;
+
AssertedBlockScope
Block
"
AssertedBoundName
.
AssertedBoundNamesScope2AssertedScriptGlobalScope
"
BindingIdentifier
CatchClause
Script
"
TryCatchStatement
[
STRINGS
]
identity
;
b
e
[
TREE
]
identity
;
4
